Fixed logo overflow problem

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -2,7 +2,7 @@
 	margin-top: 5px;
 	position: relative;
 	overflow: hidden;
-	background-color: #27ae60;
+	background-color: #34495e;
 }
 
 #leiri img {
